--- a/wiki/cs/Std_Base.html
+++ b/wiki/cs/Std_Base.html
@@ -74,7 +74,7 @@
 <dl><dd><ul><li><a href="../Std_Expressions.html#Copy_Active_Document" title="Std Expressions">Kop&iacute;rovat aktivn&iacute; dokument</a>: Zkop&iacute;ruje data v&yacute;razu z aktivn&iacute;ho dokumentu do schr&aacute;nky.</li></ul></dd></dl>
 <dl><dd><ul><li><a href="../Std_Expressions.html#Copy_All_Documents" title="Std Expressions">Kop&iacute;rovat v&scaron;echny dokumenty</a>: Zkop&iacute;ruje &uacute;daje o v&yacute;razu ze v&scaron;ech dokument&#367; do schr&aacute;nky.</li></ul></dd></dl>
 <dl><dd><ul><li><a href="../Std_Expressions.html#Paste" title="Std Expressions">Vlo&#382;it</a>: Vlo&#382;&iacute; data v&yacute;razu ze schr&aacute;nky.</li></ul></dd></dl>
-<ul><li><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Part_SelectFilter.svg&amp;filetimestamp=20240719123546&amp;.html" class="mw-file-description"><img src="../File/Part_SelectFilter.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> <a href="../Part_SelectFilter.html" title="Part SelectFilter">Selection Filter</a>: <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
+<ul><li><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Part_SelectFilter.svg&amp;filetimestamp=20240719123546&amp;.html" class="mw-file-description"><img src="../File/Part_SelectFilter.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> <a href="../Part_SelectFilter.html" title="Part SelectFilter">Filtr v&yacute;b&#283;ru</a>: <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Vertex-selection.svg&amp;filetimestamp=20240704201749&amp;.html" class="mw-file-description"><img src="../File/Vertex-selection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_SelectFilter.html#Vertex_Selection" title="Part SelectFilter">Vertex Selection</a>: Only allows the selection of vertices.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Edge-selection.svg&amp;filetimestamp=20240704192347&amp;.html" class="mw-file-description"><img src="../File/Edge-selection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_SelectFilter.html#Edge_Selection" title="Part SelectFilter">Edge Selection</a>: Only allows the selection of edges.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Face-selection.svg&amp;filetimestamp=20240704192839&amp;.html" class="mw-file-description"><img src="../File/Face-selection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_SelectFilter.html#Face_Selection" title="Part SelectFilter">Face Selection</a>: Only allows the selection of faces.</li></ul></dd></dl>
@@ -149,12 +149,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118094512
+Cached time: 20260118094546
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.181 seconds
-Real time usage: 0.301 seconds
+CPU time usage: 0.156 seconds
+Real time usage: 0.225 seconds
 Preprocessor visited node count: 549/1000000
 Post&#8208;expand include size: 29112/2097152 bytes
 Template argument size: 11653/2097152 bytes
@@ -165,18 +165,18 @@ Unstrip post&#8208;expand size: 2372/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.807      1 -total
- 42.86%   11.489      1 Template:Std_Base_navi/cs
- 27.37%    7.337      2 Template:Navigation_menu_2
- 19.99%    5.360      1 Template:Userdocnavi/cs
-  9.01%    2.415      2 Template:Docnav
-  6.11%    1.638      6 Template:VersionPlus
-  5.76%    1.543      8 Template:Version
-  5.72%    1.534      1 Template:StdMenu
-  5.42%    1.454      1 Template:TOCright
+100.00%   28.278      1 -total
+ 39.15%   11.071      1 Template:Std_Base_navi/cs
+ 27.42%    7.755      2 Template:Navigation_menu_2
+ 24.12%    6.822      1 Template:Userdocnavi/cs
+  8.62%    2.437      1 Template:TOCright
+  8.23%    2.328      2 Template:Docnav
+  6.29%    1.778      6 Template:VersionPlus
+  5.18%    1.464      1 Template:StdMenu
+  4.62%    1.305      8 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118094512 and revision id 1740063. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118094546 and revision id 1740065. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
