--- a/wiki/cs/Std_Base.html
+++ b/wiki/cs/Std_Base.html
@@ -79,7 +79,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Edge-selection.svg&amp;filetimestamp=20240704192347&amp;.html" class="mw-file-description"><img src="../File/Edge-selection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_SelectFilter.html#Edge_Selection" title="Part SelectFilter">V&yacute;b&#283;r hran</a>: Umo&#382;&#328;uje vybrat pouze hrany.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Face-selection.svg&amp;filetimestamp=20240704192839&amp;.html" class="mw-file-description"><img src="../File/Face-selection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_SelectFilter.html#Face_Selection" title="Part SelectFilter">V&yacute;b&#283;r ploch</a>: Umo&#382;&#328;uje pouze v&yacute;b&#283;r ploch.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Clear-selection.svg&amp;filetimestamp=20240704191440&amp;.html" class="mw-file-description"><img src="../File/Clear-selection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_SelectFilter.html#No_Selection_Filters" title="Part SelectFilter">&#381;&aacute;dn&eacute; filtry v&yacute;b&#283;ru</a>: Umo&#382;&#328;uje v&yacute;b&#283;r v&scaron;ech podprvk&#367;.</li></ul></dd></dl>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Std_TreeSelectAllInstances.svg&amp;filetimestamp=20200619151800&amp;.html" class="mw-file-description"><img src="../File/Std_TreeSelectAllInstances.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_TreeSelectAllInstances.html" title="Std TreeSelectAllInstances">Select All Instances</a>: Selects all instances of an object in the <a href="../Tree_View.html" title="Tree View">Tree View</a>.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Std_TreeSelectAllInstances.svg&amp;filetimestamp=20200619151800&amp;.html" class="mw-file-description"><img src="../File/Std_TreeSelectAllInstances.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_TreeSelectAllInstances.html" title="Std TreeSelectAllInstances">Vybrat v&scaron;echny instance</a>: Vybere v&scaron;echny instance objektu ve <a href="../Tree_View.html" title="Tree View">stromov&eacute;m zobrazen&iacute;</a>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Std_ToggleFreeze.svg&amp;filetimestamp=20240411193839&amp;.html" class="mw-file-description"><img src="../File/Std_ToggleFreeze.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> <a href="../Std_ToggleFreeze.html" title="Std ToggleFreeze">Toggle Freeze</a>: Toggles the freeze state of objects. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <h3><span class="mw-headline" id="Obsolete_tools">Obsolete tools</span></h3>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Std_FreeCADFAQ.svg&amp;filetimestamp=20240704213151&amp;.html" class="mw-file-description"><img src="../File/Std_FreeCADFAQ.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_FreeCADFAQ.html" title="Std FreeCADFAQ">FreeCAD FAQ</a>: Opens the FreeCAD FAQ wiki page. Not available in <span style="font-size:small;color:green;">1.1 and above</span>.</li></ul>
@@ -149,12 +149,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118094816
+Cached time: 20260118094917
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.162 seconds
-Real time usage: 0.341 seconds
+CPU time usage: 0.165 seconds
+Real time usage: 0.260 seconds
 Preprocessor visited node count: 549/1000000
 Post&#8208;expand include size: 29112/2097152 bytes
 Template argument size: 11653/2097152 bytes
@@ -165,18 +165,18 @@ Unstrip post&#8208;expand size: 2372/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   52.599      1 -total
- 31.24%   16.433      1 Template:Std_Base_navi/cs
- 15.56%    8.182      2 Template:Navigation_menu_2
- 15.15%    7.967      1 Template:StdMenu
- 11.00%    5.786      6 Template:VersionPlus
-  9.88%    5.197      8 Template:Version
-  9.84%    5.174      2 Template:Docnav
-  9.00%    4.735      1 Template:Userdocnavi/cs
-  5.10%    2.683      1 Template:TOCright
+100.00%   29.459      1 -total
+ 40.43%   11.910      1 Template:Std_Base_navi/cs
+ 25.53%    7.520      2 Template:Navigation_menu_2
+ 21.08%    6.209      1 Template:Userdocnavi/cs
+  8.10%    2.385      2 Template:Docnav
+  7.40%    2.179      1 Template:StdMenu
+  6.39%    1.883      8 Template:Version
+  6.36%    1.873      6 Template:VersionPlus
+  6.12%    1.802      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118094816 and revision id 1740078. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118094917 and revision id 1740083. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
