--- a/wiki/fr/TechDraw_CosmeticEraser.html
+++ b/wiki/fr/TechDraw_CosmeticEraser.html
@@ -52,7 +52,7 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<p>L'outil <b>TechDraw Gomme</b> efface les objets cosm&eacute;tiques. Les objets cosm&eacute;tiques comprennent les sommets cosm&eacute;tiques, les lignes cosm&eacute;tiques et les lignes centrales.
+<p>L'outil <b>TechDraw Supprimer un objet cosm&eacute;tique</b> supprime des objets cosm&eacute;tiques. Les objets cosm&eacute;tiques comprennent les sommets cosm&eacute;tiques, les lignes cosm&eacute;tiques et les lignes centrales.
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
@@ -111,12 +111,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118094900
+Cached time: 20260118094934
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.068 seconds
-Real time usage: 0.126 seconds
+CPU time usage: 0.074 seconds
+Real time usage: 0.119 seconds
 Preprocessor visited node count: 347/1000000
 Post&#8208;expand include size: 24537/2097152 bytes
 Template argument size: 9531/2097152 bytes
@@ -127,19 +127,19 @@ Unstrip post&#8208;expand size: 1501/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.881      1 -total
- 26.78%    9.340      1 Template:TechDraw_Tools_navi/fr
- 13.18%    4.598      2 Template:Navigation_menu_2
- 12.20%    4.257      1 Template:Userdocnavi/fr
- 11.17%    3.897      1 Template:GuiCommand/fr
- 10.89%    3.797      2 Template:Docnav/fr
-  9.13%    3.184      1 Template:Button
-  8.99%    3.137      1 Template:Version/fr
-  6.23%    2.172      1 Template:MenuCommand
-  4.69%    1.636      1 Template:KEY
+100.00%   31.938      1 -total
+ 26.32%    8.407      1 Template:TechDraw_Tools_navi/fr
+ 19.30%    6.163      1 Template:GuiCommand/fr
+ 15.85%    5.062      2 Template:Navigation_menu_2
+ 12.95%    4.137      1 Template:Userdocnavi/fr
+  9.78%    3.124      2 Template:Docnav/fr
+  9.67%    3.089      1 Template:KEY
+  7.82%    2.499      1 Template:Button
+  7.25%    2.316      1 Template:Version/fr
+  4.46%    1.425      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156760-0!canonical and timestamp 20260118094900 and revision id 1740080. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156760-0!canonical and timestamp 20260118094934 and revision id 1740085. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
